# smol-llm

./: .gitignore  .gitmodules  .ignore  CMakeLists.txt  README.md
scripts/: debug.sh  run.sh
src/: main.cc
